--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/phoport.jpg" alt="Fatahidayat" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/photport.jpg" alt="Fatahidayat" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Fatahidayat</h1>
       <p class="lead">Beginner Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
